--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -3,7 +3,7 @@
 .first_button,
 .second_button{
 	font-size: 28px;
-	font-family: Helvetica, Times New Roman, sans-serif;
+	font-family: Helvetica, "Times New Roman", sans-serif;
 }
 .first_button{
 	background: black;
